Edited bacteria_request_form template, virus_air_disinfection_request_form template and virus_disinfection_request_form template in academic_services and service_admin templates

--- a/app/templates/academic_services/forms/bacteria_request_form.html
+++ b/app/templates/academic_services/forms/bacteria_request_form.html
@@ -385,13 +385,15 @@
 
                 let hasOptions = false;
                 for (let i = 0; i < productType.options.length; i++) {
+                    console.log('p', productType.options[i].value)
+                    console.log('s', subformId)
                     if (productType.options[i].value === subformId) {
                         hasOptions = true;
                         break;
                     }
                 }
 
-                if (!hasOptions) {
+                if (hasOptions == false) {
                     const option = document.createElement('option');
                     option.value = subformId;
                     option.text = text;
