Edited subformID value in function of bacteria_request_form template and service_admin templates

--- a/app/templates/service_admin/forms/bacteria_request_form.html
+++ b/app/templates/service_admin/forms/bacteria_request_form.html
@@ -363,7 +363,7 @@
                     card.remove();
                     e.preventDefault();
                 }
-                const subformId = e.target.id.split(/[\s_]+/)[0];
+                const subformId = e.target.id.replace('_condition_field', '');
 
                 let hasOptions = false;
                 for (let i = 0; i < productType.options.length; i++) {
