edited display number and UI

--- a/app/templates/staff/seminar_create_record.html
+++ b/app/templates/staff/seminar_create_record.html
@@ -147,7 +147,7 @@
                                 <b-radio native-value="paid" v-model="payment" name="payment">มีค่าใช้จ่าย</b-radio>
                             </div>
                         </div>
-                        <b-field label="ชื่องบประมาณ/ทุน" v-if="payment === 'paid'">
+                        <b-field label="แหล่งงบประมาณ/เงินทุน" v-if="payment === 'paid'">
                             <b-input type="text"
                                      name="budget_type"
                                      icon-pack="far"
