--- a/app/templates/staff/seminar_each_record.html
+++ b/app/templates/staff/seminar_each_record.html
@@ -3,6 +3,7 @@
 {% block page_content %}
 <section class="section" id="app">
     <div class="container">
+    {% include "messages.html" %}
         <div class="columns">
             <div class="column is-half is-offset-one-quarter">
                 <div class="box">
@@ -128,7 +129,7 @@
                                 {{ attend.budget_type }} :
                                 {% endif %}
                                 รวมทั้งสิ้น
-                                {{ attend.budget }}
+                                {{ "{:,.2f}".format(attend.budget) }}
                             </td>
                         </tr>
                         {% endif %}
@@ -136,7 +137,7 @@
                         <tr>
                             <td></td>
                             <td>
-                                ค่าลงทะเบียน: {{ attend.registration_fee }}
+                                ค่าลงทะเบียน: {{ "{:,.2f}".format(attend.registration_fee) }}
                             </td>
                         </tr>
                         {% endif %}
@@ -144,7 +145,7 @@
                         <tr>
                             <td></td>
                             <td>
-                                ค่าที่พัก: {{ attend.accommodation_cost }}
+                                ค่าที่พัก: {{ "{:,.2f}".format(attend.accommodation_cost) }}
                             </td>
                         </tr>
                         {% endif %}
@@ -152,7 +153,7 @@
                         <tr>
                             <td></td>
                             <td>
-                                ค่าน้ำมัน: {{ attend.fuel_cost }}
+                                ค่าน้ำมัน: {{ "{:,.2f}".format(attend.fuel_cost) }}
                             </td>
                         </tr>
                         {% endif %}
@@ -160,7 +161,7 @@
                         <tr>
                             <td></td>
                             <td>
-                                ค่ารถไฟ: {{ attend.train_ticket_cost }}
+                                ค่ารถไฟ: {{ "{:,.2f}".format(attend.train_ticket_cost) }}
                             </td>
                         </tr>
                         {% endif %}
@@ -168,7 +169,7 @@
                         <tr>
                             <td></td>
                             <td>
-                                ค่าTaxi: {{ attend.taxi_cost }}
+                                ค่าTaxi: {{ "{:,.2f}".format(attend.taxi_cost) }}
                             </td>
                         </tr>
                         {% endif %}
@@ -176,7 +177,7 @@
                         <tr>
                             <td></td>
                             <td>
-                                ค่าตั๋วเครื่องบิน: {{ attend.flight_ticket_cost }}
+                                ค่าตั๋วเครื่องบิน: {{ "{:,.2f}".format(attend.flight_ticket_cost) }}
                             </td>
                         </tr>
                         {% endif %}
@@ -184,7 +185,7 @@
                         <tr>
                             <td></td>
                             <td>
-                                ค่าธรรมเนียมการโอน: {{ attend.transaction_fee }}
+                                ค่าธรรมเนียมการโอน: {{ "{:,.2f}".format(attend.transaction_fee) }}
                             </td>
                         </tr>
                         {% endif %}
@@ -341,7 +342,7 @@
                                 '{{ idp_value }}',
                                 'เป็นการเข้าร่วม'+"{{ seminar_attend.seminar.topic_type }}"
                                 +' เพื่อพัฒนาในด้าน\n'+"{{ seminar_attend.mission_list|join(", ") }}",
-                                {text: 'ความเห็นผู้บังคับบัญชา เห็นควรอนุมัติ'},
+                                {text: 'ความเห็นผู้บังคับบัญชา เห็นควรอนุมัติ เหตุผลความจำเป็น.....................................................................'},
                             ]
 				        },
 			        ]
@@ -363,7 +364,7 @@
                         headerRow: 0,
                         widths: [230,'*',5],
                         body: [
-                            ['', {text: '\n\n'+"{{ prefix_position }} "+"{{ approver }}"+'\n'+ "{{ approver_position }}",
+                            ['', {text: '\n\n'+"("+"{{ prefix_position }} "+"{{ approver }}"+")"+'\n'+ "{{ approver_position }}",
                                 fontSize:17, alignment: 'center'},''],
                         ],
                     }
