--- a/app/templates/staff/seminar_attend_search_result.html
+++ b/app/templates/staff/seminar_attend_search_result.html
@@ -98,7 +98,7 @@
                 </form>
                 <hr>
             </div>
-            <p class="is-size-3 has-text-right">ค่าใช้จ่ายรวม {{ budget }}</p>
+            <p class="is-size-3 has-text-right">ค่าใช้จ่ายรวม {{ "{:,.2f}".format(budget) }}</p>
             <div class="columns">
                 <div class="column">
                     <table class="table is-striped" id="seminarTable">
@@ -127,7 +127,7 @@
                                 <td>{{ record.seminar.topic_type }}</td>
                                 <td>{{ record.seminar }}</td>
                                 <td>{% for obj in record.objectives %}{{ obj.objective }}{% endfor %}</td>
-                                <td>{{ record.budget }}</td>
+                                <td>{% if record.budget %}{{ "{:,.2f}".format(record.budget) }}{% endif %}</td>
                                 <td>{{ record.start_datetime|localdatetime }}</td>
                                 <td>{{ record.end_datetime|localdatetime }}</td>
                                 <td>{{ record.seminar.organize_by }}</td>
