Edited validateQualitativeAndQuantitative function in bacteria_request_condition_form template and bacteria_request_form template of academic_services and service_admin templates

--- a/app/templates/academic_services/forms/bacteria_request_form.html
+++ b/app/templates/academic_services/forms/bacteria_request_form.html
@@ -415,6 +415,7 @@
                 };
             } else {
                 product_type.required = false;
+                product_type.setCustomValidity('');
                 product_type.oninvalid = null;
                 product_type.oninput = null;
             }
@@ -532,15 +533,6 @@
             function validateQualitativeAndQuantitativeTest() {
                 const qualitativeChecked = qualitativeTestInput.is(':checked');
                 const quantitativeChecked = quantitativeTestInput.is(':checked');
-                const required = !(qualitativeChecked || quantitativeChecked);
-
-                qualitativeTestInput.prop('required', required)
-                    .attr('oninvalid', required ? "this.setCustomValidity('กรุณาเลือกวิธีทดสอบเชิงคุณภาพ')" : "")
-                    .attr('onchange', "this.setCustomValidity('')");
-
-                quantitativeTestInput.prop('required', required)
-                    .attr('oninvalid', required ? "this.setCustomValidity('กรุณาเลือกวิธีทดสอบเชิงปริมาณ')" : "")
-                    .attr('onchange', "this.setCustomValidity('')");
 
                 if (qualitativeChecked) quantitativeTestInput.closest('.field').find('label .has-text-danger').remove();
                 if (quantitativeChecked) qualitativeTestInput.closest('.field').find('label .has-text-danger').remove();
