--- a/app/templates/academic_services/request_index.html
+++ b/app/templates/academic_services/request_index.html
@@ -364,6 +364,14 @@
                                     '<span>แก้ไข</span>' +
                                     '</a>' +
                                     '</div>' +
+                                    '<div class="control">' +
+                                    '<a class="button is-small is-danger is-rounded" onclick="vm.warn(' + data + ')">' +
+                                    '<span class="icon">' +
+                                    '<i class="far fa-trash-alt"></i>' +
+                                    '</span>' +
+                                    '<span>ยกเลิก</span>' +
+                                    '</a>' +
+                                    '</div>' +
                                     '</div>';
                             } else if (row.status_id === 1) {
                                 return '<div class="field has-addons">' +
