--- a/app/templates/service_admin/forms/bacteria_request_form.html
+++ b/app/templates/service_admin/forms/bacteria_request_form.html
@@ -277,6 +277,12 @@
                                          'hx-trigger': 'change, load'}) }}
                                 </div>
                             </div>
+                            <div class="field">
+                                <div class="control">
+                                    {{ form.read_document() }}
+                                    {{ form.read_document.label }}
+                                </div>
+                            </div>
                         </div>
                         <div class="field is-grouped is-justify-content-center">
                             <div class="control">
