--- a/app/templates/academic_services/request_index.html
+++ b/app/templates/academic_services/request_index.html
@@ -367,7 +367,7 @@
                                     '<div class="control">' +
                                     '<a class="button is-small is-danger is-rounded" onclick="vm.warn(' + data + ')">' +
                                     '<span class="icon">' +
-                                    '<i class="far fa-trash-alt"></i>' +
+                                    '<i class="fas fa-ban"></i>' +
                                     '</span>' +
                                     '<span>ยกเลิก</span>' +
                                     '</a>' +
