--- a/app/templates/service_admin/view_quotation.html
+++ b/app/templates/service_admin/view_quotation.html
@@ -189,14 +189,16 @@
 {#                                        <span>พิมพ์ใบเสนอราคา</span>#}
 {#                                    </a>#}
 {#                                </li>#}
-                                <li>
-                                    <a class="button is-info is-outlined is-rounded is-small is-fullwidth"
-                                       href="{{ url_for('service_admin.export_quotation_pdf', quotation_id=quotation_id) }}"
-                                    >
-                                        <span class="icon"><i class="fas fa-download"></i></span>
-                                        <span>ดาวน์โหลดใบเสนอราคา</span>
-                                    </a>
-                                </li>
+                                {% if quotation.approved_at %}
+                                    <li>
+                                        <a class="button is-info is-outlined is-rounded is-small is-fullwidth"
+                                           href="{{ url_for('service_admin.export_quotation_pdf', quotation_id=quotation_id) }}"
+                                        >
+                                            <span class="icon"><i class="fas fa-download"></i></span>
+                                            <span>ดาวน์โหลดใบเสนอราคา</span>
+                                        </a>
+                                    </li>
+                                {% endif %}
                             </ul>
                         </aside>
                     </div>
