Edited status in condition in request_index template of service_admin templates

--- a/app/templates/service_admin/request_index.html
+++ b/app/templates/service_admin/request_index.html
@@ -235,7 +235,7 @@
                             var admin = '{{ admin }}';
                             var supervisor = '{{ supervisor }}';
                             var assistant = '{{ assistant }}';
-                            if (admin == 'True' && row.status_id == 2 && row.is_completed) {
+                            if (admin == 'True' && (row.status_id == 2 || row.status_id == 24) && row.is_completed) {
                                 var quotation_url = '/service_admin/quotation/generate?request_id=' + data + '&tab=draft' + '&menu=quotation&code=' + row.code;
                                 return '<div class="field has-addons">' +
                                     '<div class="control">' +
