--- a/app/templates/besttime/poll-form.html
+++ b/app/templates/besttime/poll-form.html
@@ -26,7 +26,7 @@
                         <button class="button is-success" type="submit">Submit</button>
                     </div>
                     <div class="control">
-                        <a class="button is-light" href="{{url_for('index')}}">Back</a>
+                        <a class="button is-light" href="{{url_for('besttime.index')}}">Back</a>
                     </div>
                 </div>
             </form>
@@ -46,7 +46,7 @@
             </article>
             {% endfor %}
             <br>
-            <a class="button is-link" href="{{url_for('leave_message', poll_id=poll.id)}}">Leave Message</a>
+            <a class="button is-link" href="{{url_for('besttime.leave_message', poll_id=poll.id)}}">Leave Message</a>
         </div>
     </div>
 </section>
